--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
+    "classnames": "^2.2.5",
     "react-scripts": "1.0.7"
   },
   "scripts": {
